# slipstream-async

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml  triggered-tests.yml
docs/: .readthedocs.yaml  .readthedocs.yml  Makefile  requirements.txt
docs/source/: .gitignore  conf.py  cookbook.rst  features.rst  getting_started.rst  index.rst  installation.rst
docs/source/_templates/autoapi/: index.rst
slipstream/: __init__.py  __main__.py  caching.py  checkpointing.py  codecs.py  core.py  interfaces.py  utils.py
tests/: conftest.py  test__init__.py  test_cache.py  test_checkpointing.py  test_codecs.py  test_core.py  test_interfaces.py  test_utils.py
tests/integration/: test_kafka_integration.py
